# resume-portfolio

./: README.md  feed.xml  index.html  package-lock.json  package.json  replace_all.py  robots.txt  security-report.json  sitemap.xml  tailwind.config.js
.agents/: AGENTS.md
about/: index.html
api/: contact.js
arpit resume/: resume.html
assets/css/: style.css  tailwind.min.css
blog/: index.html
certifications/: index.html
projects/: index.html
projects/iot-environment/: index.html
projects/line-follower/: index.html
projects/robo-soccer/: index.html
projects/smart-ag-node/: index.html
resume/: index.html
scripts/: dev-server.js  optimize-images.js  rebrand_cleanup.py  replace_identity.py  update_about.py  update_blog.py  update_index.py  update_index_2.py  update_projects.py  update_resume.py  update_services.py
services/: index.html
skillspector/: pyproject.toml
skillspector/skillspector/: __init__.py  cli.py  mcp_server.py  scanner.py
skillspector/skillspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
