[project]
name = "skillspector"
version = "0.1.0"
description = "Security scanner for AI agent skills"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "mcp>=0.1.0"
]

[project.scripts]
skillspector = "skillspector.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
